# hakowan

./: .gitignore  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: continuous.yml  deploy.yml  workflow.yml
api/attribute/: index.html
api/channel/: index.html
api/color/: index.html
api/colormap/: index.html
api/compile/: index.html
api/config/: index.html
api/curve_style/: index.html
api/data/: index.html
api/layer/: index.html
api/mark/: index.html
api/material/: index.html
api/medium/: index.html
api/render/: index.html
api/scale/: index.html
api/texture/: index.html
api/transform/: index.html
docs/: gallery.md  index.md  reference.md
docs/api/: attribute.md  channel.md  color.md  colormap.md  compile.md  config.md  curve_style.md  data.md  layer.md  mark.md  material.md  medium.md  render.md  scale.md  texture.md  transform.md
docs/examples/: components.md  deformation.md  developable.md  elevation.md  face.md  fibers.md  flow.md  heat.md  ipc.md  layout.md  moon.md  penny.md  powell-sabin.md  skeleton.md  sketch.md  slim.md  sph.md  tetwild.md
docs/guide/: attribute.md  backend.md  channel.md  compile.md  config.md  data.md  grammar.md  layer.md  mark.md  material.md  scale.md  texture.md  transform.md
examples/: render.py  render_beta.py
examples/components/: index.html
examples/deformation/: index.html
examples/developable/: index.html
examples/elevation/: index.html
examples/face/: index.html
examples/fibers/: index.html
examples/flow/: index.html
examples/heat/: index.html
examples/ipc/: index.html
examples/layout/: index.html
examples/moon/: index.html
examples/penny/: index.html
examples/powell-sabin/: index.html
examples/skeleton/: index.html
examples/sketch/: index.html
examples/slim/: index.html
examples/sph/: index.html
examples/tetwild/: index.html
gallery/: index.html
guide/attribute/: index.html
guide/backend/: index.html
guide/channel/: index.html
guide/compile/: index.html
guide/config/: index.html
guide/data/: index.html
guide/grammar/: index.html
guide/layer/: index.html
guide/mark/: index.html
guide/material/: index.html
guide/scale/: index.html
guide/texture/: index.html
guide/transform/: index.html
search/: search_index.json
src/hakowan/: __init__.py  __main__.py  layer.py  layer_data.py  mitsuba_utils.py  render.py  render_utils.py
src/hakowan/backend/: mitsuba_render.py  mitsuba_utils.py  render.py  render_config.py  serialization.py
src/hakowan/backends/: __init__.py
src/hakowan/backends/blender/: __init__.py  _common.py  geometry.py  materials.py  render.py  scene.py
src/hakowan/backends/mitsuba/: __init__.py  base_shapes.py  bsdf.py  color.py  emitter.py  film.py  integrator.py  medium.py  render.py  sampler.py  sensor.py  shape.py  spectrum.py  texture.py  utils.py
src/hakowan/backends/webgl/: __init__.py  builder.py  camera.py  curve.py  envmap.py  material_translate.py  mesh_extract.py  point_cloud.py  render.py  template.py  utils.py
src/hakowan/backends/webgl/templates/: viewer.html
src/hakowan/beta/: __init__.py
src/hakowan/beta/common/: color.py  envmaps.py  exception.py  logger.py  msh_utils.py  named_colors.py  to_color.py
src/hakowan/beta/common/colormap/: coolwarm.py  viridis.py
src/hakowan/beta/compiler/: __init__.py  attribute.py  channel.py  color.py  compile.py  scene.py  texture.py  transform.py  utils.py  view.py
src/hakowan/beta/config/: config.py  emitter.py  film.py  integrator.py  sampler.py  sensor.py
src/hakowan/beta/render/: __init__.py  bsdf.py  emitter.py  film.py  integrator.py  render.py  sampler.py  sensor.py  shape.py  texture.py
src/hakowan/common/: __init__.py  color.py  default.py  exception.py  image_io.py  msh_utils.py  named_colors.py  output.py  to_color.py  vector_field.py
src/hakowan/common/colormap/: colorbrewer2.py  colormap.py  coolwarm.py  inferno.py  magma.py  named_colormaps.py  plasma.py  turbo.py  viridis.py
src/hakowan/compiler/: __init__.py  attribute.py  channel.py  color.py  compile.py  scene.py  streamline.py  texture.py  transform.py  utils.py  view.py
src/hakowan/config/: __init__.py  emitter.py
src/hakowan/envmaps/: README.md
src/hakowan/grammar/: __init__.py  layer.py  layer_data.py
src/hakowan/grammar/channel/: __init__.py  channel.py  curvestyle.py
src/hakowan/grammar/dataframe/: __init__.py  dataframe.py
src/hakowan/grammar/layer/: __init__.py  layer.py  layer_spec.py
src/hakowan/grammar/mark/: __init__.py  mark.py
src/hakowan/grammar/scale/: __init__.py  attribute.py  offset.py  scale.py
src/hakowan/grammar/texture/: __init__.py  texture.py
src/hakowan/grammar/transform/: __init__.py  transform.py
src/hakowan/render/: __init__.py  base_shapes.py  bsdf.py  color.py  emitter.py  film.py  icosphere.py  integrator.py  medium.py  render.py  sampler.py  sensor.py  shape.py  spectrum.py  texture.py
src/hakowan/scene/: scene.py  scene_utils.py
src/hakowan/setup/: __init__.py  config.py  emitter.py  film.py  integrator.py  render_pass.py  sampler.py  sensor.py
syntax/: syntax.txt
tests/: __init__.py  conftest.py  test_blender_facet_id.py  test_blender_features.py  test_channel.py  test_color.py  test_colormap.py  test_compile.py  test_config.py  test_dataframe.py  test_facet_id_warning.py  test_image_io.py  test_layer.py  test_layer_data.py  test_mark.py  test_mitsuba.py  test_native_output.py  test_normal.py  test_render.py  test_render_passes.py  test_scale.py  test_scene.py  test_texture.py  test_transform.py  test_utils.py  test_webgl_builder.py  test_webgl_camera.py  test_webgl_covariance.py  test_webgl_envmap.py  test_webgl_material.py  test_webgl_mesh_extract.py  test_webgl_point_cloud.py  test_webgl_render.py  test_webgl_utils.py
tests/beta/: asset.py  test_channel.py  test_color.py  test_compile.py  test_config.py  test_dataframe.py  test_layer.py  test_mark.py  test_render.py  test_scale.py  test_texture.py  test_transform.py
(+20 files in other folders)
